crates/keron-lang/tests/corpus/errors/check/map_with_symlink_key.keron
from "std:fs" use Symlink

val m: Map<Symlink, Int> = {}